--- a/deploymentservice.yml
+++ b/deploymentservice.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nodeapp-deployment
+  namespace: apinode
   labels:
     app: nodeapp
 spec:
@@ -26,6 +27,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nodeapp-service
+  namespace: apinode
 spec:
   selector:
     app: nodeapp 
