--- a/azuredisk-sc.yml
+++ b/azuredisk-sc.yml
@@ -1,10 +1,10 @@
 kind: StorageClass
-apiVersion: storge.k8s.io/v1
+apiVersion: storage.k8s.io/v1
 metadata: 
   name: azuredisk-preminum-retain 
 provisioner: kubernetes.io/azure-disk
 reclaimPolicy: Retain
-volumeBindingMode: wairForFirstConsumer
+volumeBindingMode: WaitForFirstConsumer
 allowVolumeExpansion: true 
 parameters:
   stroageaccounttype: Premium_LRS
