--- a/deployment.yml
+++ b/deployment.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nodeapp-deployment
+  namespace: default
   labels:
     app: nodeapp
 spec:
