--- a/deployment.yml
+++ b/deployment.yml
@@ -20,3 +20,18 @@ spec:
         image: appapinode.azurecr.io/appapinode:latest
         ports:
         - containerPort: 3000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nodeapp-service
+spec:
+  selector:
+    app: nodeapp 
+  type: LoadBalancer
+  ports:
+  - protocol: TCP
+    port: 5000
+    targetPort: 3000
+    nodePort: 31110
+
