--- a/azuredisk-sc.yml
+++ b/azuredisk-sc.yml
@@ -1,11 +1,11 @@
 kind: StorageClass
 apiVersion: storage.k8s.io/v1
-metadata: 
+metadata:
   name: azuredisk-premium-retain
 provisioner: kubernetes.io/azure-disk
-reclaimPolicy: Delete
-volumeBindingMode: WaitForFirstConsumer
-allowVolumeExpansion: true 
+reclaimPolicy: Delete   # Retain or Delete
+volumeBindingMode: WaitForFirstConsumer   # WaitForFirstConsumer or Immediate
+allowVolumeExpansion: true    # true or false
 parameters:
-  stroageaccounttype: Premium_LRS
+  storageaccounttype: Premium_LRS   # Premium or Standard
   kind: Managed
