--- a/azuredisk-sc.yml
+++ b/azuredisk-sc.yml
@@ -2,6 +2,7 @@ kind: StorageClass
 apiVersion: storage.k8s.io/v1
 metadata:
   name: azuredisk-premium-retain
+  namespace: dev
 provisioner: kubernetes.io/azure-disk
 reclaimPolicy: Delete   # Retain or Delete
 volumeBindingMode: WaitForFirstConsumer   # WaitForFirstConsumer or Immediate
