--- a/azuredisk-sc.yml
+++ b/azuredisk-sc.yml
@@ -8,5 +8,5 @@ reclaimPolicy: Delete   # Retain or Delete
 volumeBindingMode: WaitForFirstConsumer   # WaitForFirstConsumer or Immediate
 allowVolumeExpansion: true    # true or false
 parameters:
-  storageaccounttype: Premium_LRS   # Premium or Standard
+  storageaccounttype: Standard_LRS   # Premium or Standard
   kind: Managed 
