--- a/appapinode-deployment-service.yml
+++ b/appapinode-deployment-service.yml
@@ -13,7 +13,7 @@ metadata:
 spec:
   storageClassName: azuredisk-standard-retain
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 5Gi
